hello-kubeless-svc-default.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2020-03-27T00:18:31Z"
  labels:
    created-by: kubeless
    function: hello
  name: hello
  namespace: default
  ownerReferences:
  - apiVersion: kubeless.io/v1beta1
    kind: Function
    name: hello
    uid: 08475c92-4c23-41b6-ac0f-ef22b5ef3bb3
  resourceVersion: "11778995"
  selfLink: /api/v1/namespaces/default/services/hello
  uid: 60d168bd-d9cf-4b44-b7c5-3bc2ae7c3ff9
spec:
  clusterIP: 10.43.28.146
  ports:
  - name: http-function-port
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    created-by: kubeless
    function: hello
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
